; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/core/extr_quirks.c_usb_detect_quirks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/core/extr_quirks.c_usb_detect_quirks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32, i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@usb_quirk_list = common dso_local global i32 0, align 4
@usb_amd_resume_quirk_list = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"USB quirks for this device: %x\0A\00", align 1
@USB_CLASS_HUB = common dso_local global i64 0, align 8
@USB_QUIRK_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_detect_quirks(%struct.usb_device* %0) #0 {
  %2 = alloca %struct.usb_device*, align 8
  store %struct.usb_device* %0, %struct.usb_device** %2, align 8
  %3 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %4 = load i32, i32* @usb_quirk_list, align 4
  %5 = call i32 @usb_detect_static_quirks(%struct.usb_device* %3, i32 %4)
  %6 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %7 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %6, i32 0, i32 0
  store i32 %5, i32* %7, align 8
  %8 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %9 = call i64 @usb_amd_resume_quirk(%struct.usb_device* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %13 = load i32, i32* @usb_amd_resume_quirk_list, align 4
  %14 = call i32 @usb_detect_static_quirks(%struct.usb_device* %12, i32 %13)
  %15 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %16 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 8
  br label %19

19:                                               ; preds = %11, %1
  %20 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %21 = call i32 @usb_detect_dynamic_quirks(%struct.usb_device* %20)
  %22 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %23 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = xor i32 %24, %21
  store i32 %25, i32* %23, align 8
  %26 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %27 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %19
  %31 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %32 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %31, i32 0, i32 3
  %33 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %34 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = call i32 @dev_dbg(i32* %32, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %35)
  br label %37

37:                                               ; preds = %30, %19
  %38 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %39 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %38, i32 0, i32 2
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* @USB_CLASS_HUB, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %47

44:                                               ; preds = %37
  %45 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %46 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %45, i32 0, i32 1
  store i32 1, i32* %46, align 4
  br label %47

47:                                               ; preds = %44, %37
  ret void
}

declare dso_local i32 @usb_detect_static_quirks(%struct.usb_device*, i32) #1

declare dso_local i64 @usb_amd_resume_quirk(%struct.usb_device*) #1

declare dso_local i32 @usb_detect_dynamic_quirks(%struct.usb_device*) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
